--- a/src/Exc_18/pom.xml
+++ b/src/Exc_18/pom.xml
@@ -99,6 +99,14 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <version>2.6.6</version>
+        </dependency>
     </dependencies>
 
 
