--- a/src/Exc_18/pom.xml
+++ b/src/Exc_18/pom.xml
@@ -101,7 +101,11 @@
         </dependency>
 
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.6.6</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
